Fix/mapping warning entity (#63)
* fix get file from db repository method

* fix mapping warning messages entity